--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "repository": {
     "type": "git",
+    "url": "https://github.com/esseswann/react-tetris.git"
   },
   "keywords": [
     "react",
