--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack-dev-server": ">=3.1.11"
   },
   "dependencies": {
     "randomcolor": "^0.4.4",
